# kamikaze-hacker

./: .gitignore  Cargo.toml  LICENSE  PASOS.md  README.md  build.ps1  index.html  kamikaze.wasm  serve.py
.cargo/: config.toml
src/: main.rs
